@@ -4,6 +4,7 @@
 class Net::SSLeay::X509_NAME : pointer {
   
   use Net::SSLeay::X509_NAME_ENTRY;
+  use Net::SSLeay::ASN1_OBJECT;
   use Fn;
   
   # Class Methods
@@ -26,6 +27,8 @@ class Net::SSLeay::X509_NAME : pointer {
   native method get_index_by_NID : int ($nid : int, $lastpos : int);
   
   native method entry_count : int ();
+  
+  native method get_index_by_OBJ : int ($obj : Net::SSLeay::ASN1_OBJECT, $lastpos : int);
   
   native method DESTROY : void ();
   
